# KURS1

./: .gitignore  README.md  mergesort.py  sort.c
RGR/: CMakeLists.txt  anagramm.c  anagramm.h  input.txt  main  main.c
WebLab14/: index.html
WebLab14/css/: style.css
WebLab14/js/: main.js
WebLab14/public/: .gitkeep:Zone.Identifier
atm/: account.cpp  account.h  atm_engine.cpp  atm_engine.h  card.cpp  card.h  file_storage.cpp  file_storage.h  journal.cpp  journal.h  main.cpp  recovery.cpp  recovery.h  transaction.h
atm/tests/: tests.cpp  tests.h
js/: main.js
lab10/: dz10.1.c  dz10.2.c  dz10.3.h  dz10.c
lab12/: function.c  header.h  main  main.c  static_exe
lab13/: CMakeLists.txt  Makefile
lab13/app/: main.c
lab13/cmake_task/: CMakeLists.txt
lab13/cmake_task/background/: CMakeLists.txt
lab13/cmake_task/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  main
lab13/cmake_task/build2/background/: Makefile  cmake_install.cmake
lab13/cmake_task/build2/pipes/: Makefile  cmake_install.cmake
lab13/cmake_task/pipes/: CMakeLists.txt
lab14/: main  main.c
lab15/: main  main.c  staff.csv
lab16/: test1  test1.c  test1.none  test2  test2.c  test3  test4  test4.c
lab18/three/: README.md
lab19/src/: main.cpp  paint_core.cpp
lab4/: dz4.17.c  dz4.18.c
lab5/: dz5.1.c  dz5.2.c
lab6/: dz6.1.c  dz6.2.c
lab7/: dz7.1.c
lab8/: dz8.1.c
lab9/: README.md  mergesort.py
three/: thread1  thread1.c  thread2  thread2.c  thread3  thread3.c
